[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/intro_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/CutScenes/title.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/game_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/GUI/ClickableLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/GUI/logo-armor-games.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "TransitionScene"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_transition_complete"
} ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 92.0
texture = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="TextureRect"]
margin_left = 6.0
margin_top = 8.0
margin_right = 123.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.92549, 0.596078, 0.0431373, 1 )
custom_fonts/font = ExtResource( 3 )
text = "The legend of Mora"
align = 1

[node name="CreditLabel" type="Label" parent="TextureRect"]
margin_left = 98.0
margin_top = 77.0
margin_right = 126.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_fonts/font = ExtResource( 1 )
text = "By Gad"
align = 2

[node name="ContinueButton" parent="TextureRect" instance=ExtResource( 5 )]
margin_left = 38.0
margin_top = 23.0
margin_right = 89.0
margin_bottom = 34.0
mouse_filter = 1
text = "continue"

[node name="NewGameButton" parent="TextureRect" instance=ExtResource( 5 )]
margin_left = 40.0
margin_top = 36.0
margin_right = 88.0
margin_bottom = 47.0
mouse_filter = 1
text = "new game"

[node name="IntroButton" parent="TextureRect" instance=ExtResource( 5 )]
margin_left = 30.0
margin_top = 49.0
margin_right = 99.0
margin_bottom = 60.0
mouse_filter = 1
text = "watch   intro"

[node name="PlayMoreGamesButton" parent="TextureRect" instance=ExtResource( 5 )]
margin_left = 36.0
margin_top = 68.0
margin_right = 131.0
margin_bottom = 79.0
mouse_filter = 1
text = "play more games"

[node name="LikeUsButton" parent="TextureRect" instance=ExtResource( 5 )]
margin_left = 70.0
margin_top = 79.0
margin_right = 139.0
margin_bottom = 90.0
mouse_filter = 1
text = "like us!"

[node name="QuitButton" parent="TextureRect" instance=ExtResource( 5 )]
margin_left = 50.0
margin_top = 64.0
margin_right = 78.0
margin_bottom = 75.0
mouse_filter = 1
text = "quit"

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 128.0
margin_bottom = 92.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/TransitionScene = SubResource( 2 )

[node name="ArmorGamesLogo" type="Sprite" parent="."]
position = Vector2( 23, 78 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )
